fix birdthday table not align bugs

--- a/src/pages/ContactsPage/ContactStyles.css
+++ b/src/pages/ContactsPage/ContactStyles.css
@@ -8,9 +8,7 @@
     grid-row-gap: 2rem;
     margin: 2rem 5rem 2rem 5rem;
 }
-.birthday-card {
-    height: 100%;
-}
+
 .contacts-cards {
     width: 100%;
     min-width: 15rem;
