--- a/src/pages/DashnoardPage/DashboardStyles.css
+++ b/src/pages/DashnoardPage/DashboardStyles.css
@@ -83,8 +83,8 @@
 }
 
 .time-card {
-   height: 100%;
-   width: 100%;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -119,6 +119,7 @@
         font-size: 1rem;
         /* Adjust this value as needed */
     }
+    
 }
 
 .event-card-title {
@@ -165,6 +166,9 @@
 } */
 
 
+.birthday-card {
+    height: 100%;
+}
 
 .date-and-note-container {
     display: flex;
@@ -184,19 +188,18 @@
     flex-basis: auto;
     align-self: auto;
     order: 0;
-} 
+    width: 100%;
+   
+    border-radius: 15px;
+    background: #ffffff;
+    box-shadow: 5px 5px 10px #b2b2b2;
+}
 
 .quick-note-card {
     width: 100%;
     height: 100%;
 }
 
-.full-height-textfield {
-    height: 100%;
-    padding: 1rem !important;
-   
-  }
-  
 
 /* .dashboard-middle-container {
     display: grid;
